--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,22 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# npm
+npm-debug.log
+
+# tmp, editor & OS files
+.tmp
+*.swo
+*.swp
+*.swn
+*.swm
+.DS_STORE
+*#
+*~
+.idea
+nbproject
+
+# Other
+.node_history
+coverage
