--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
   "sails": {
     "isHook": true
   },
+  "engines": {
+    "node": ">= 0.10",
+    "npm": ">= 2.3"
+  },  
   "dependencies": {
     "fs-extra": "0.24.0",
     "lodash": "3.10.1",
