--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
   "engines": {
     "node": ">= 0.10",
     "npm": ">= 2.3"
-  },  
+  },
   "dependencies": {
     "fs-extra": "0.24.0",
+    "json-cycle": "1.0.5",
     "lodash": "3.10.1",
     "pretty-bytes": "2.0.1"
   },
